--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <section class="download-container">
         <!-- This is where the new APK download links will be appended by GitHub Actions -->
         <div id="apk-download-links">
+<p style="background-color:linen; margin-top:10px">New APK version: v2.2.1</p>
+<a href="" download>Download APK</a>
 <p>New APK version: v2.1.10</p>
 <a href="" download>Download APK</a>
             <!-- New links will be added here -->
