manual addition of link

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     <section class="download-container">
         <!-- This is where the new APK download links will be appended by GitHub Actions -->
         <div id="apk-download-links">
-<p>New APK version: v2.1.10</p>
-<a href="" download>Download APK</a>
+            <p>New APK version: v2.1.10</p>
+            <a href="https://expo.dev/accounts/reechdev/projects/reech-mac-mob-app/builds/a22ac723-4eb6-48b2-b127-79e30fb7e1bb"
+                download>Download APK</a>
             <!-- New links will be added here -->
         </div>
     </section>
