--- a/index.html
+++ b/index.html
@@ -55,12 +55,21 @@
 
     <section class="download-container">
         <!-- This is where the new APK download links will be appended by GitHub Actions -->
+
+        <div id="apk-download-links">
+            <p>New APK version: v2.2.24</p>
+            <a href="https://expo.dev/accounts/reechdev/projects/reech-mac-mob-app/builds/88d894f5-7e4e-492a-ba24-9eb7258c787c"
+                download>Download APK</a>
+            <!-- New links will be added here -->
+        </div>
+        <hr />
         <div id="apk-download-links">
             <p>New APK version: v2.2.23</p>
             <a href="https://expo.dev/accounts/reechdev/projects/reech-mac-mob-app/builds/a22ac723-4eb6-48b2-b127-79e30fb7e1bb"
                 download>Download APK</a>
             <!-- New links will be added here -->
         </div>
+        <hr />
     </section>
 
     <footer class="version-info">
